--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,187 @@
-.App {
-  text-align: center;
+* {
+  margin: 0;
+  padding: 0;
 }
+@import url('https://fonts.googleapis.com/css2?family=Karla:wght@400;700;900&family=Markazi+Text&display=swap');
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+header {
   display: flex;
-  flex-direction: column;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  height: 5.5rem;
+}
+
+header .logo {
+  margin-left: 15%;
+  display: flex;
+}
+.logo > img {
+  width: 290px;
+}
+.navbar {
+  display: flex;
+}
+.navbar ul {
+  list-style: none;
+  display: grid;
+  grid-auto-flow: column;
+  margin-left: 0.2rem;
+}
+.navbar ul a {
+  text-decoration: none;
+
+  width: 56px;
+  /* height: 28px; */
+  font-family: 'Karla';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 23px;
+  color: black;
+}
+
+.navbar li {
+  margin-left: 2rem;
+}
+
+main {
+  height: 40rem;
+  width: auto;
+  /* display: flex; */
+}
+.hero {
+  background-color: #495e57;
+  display: flex;
+  height: 23rem;
+  justify-content: space-evenly;
+}
+.hero h1 {
+  font-family: 'Markazi Text';
+  margin-top: 12px;
+  font-weight: 500;
+  font-size: 3rem;
+  line-height: 67px;
+  color: #f4ce14;
+}
+.hero h2 {
+  font-family: 'Markazi Text';
   color: white;
+  font-weight: 400;
+  font-size: 1.7rem;
+  line-height: 38px;
+}
+.hero main {
+  /* width: 13rem; */
+  height: auto;
+  margin-right: -50px;
+  font-family: 'Karla';
+  font-weight: 400;
+  font-size: 1.2rem;
+  line-height: 29px;
+  color: white;
+  margin-bottom: 2rem;
+}
+.hero img {
+  margin-top: 2rem;
+  width: 373px;
+  height: 377px;
+  object-fit: cover;
+  border-radius: 16px;
+}
+.specials {
+  display: grid;
+  grid-template-columns: auto auto auto;
+  grid-template-rows: 5rem auto;
+  margin-top: 8rem;
+  padding: 0 17rem;
+}
+.specials > h1 {
+  font-family: 'Markazi Text';
+  margin-top: 12px;
+  font-weight: 700;
+  font-size: 3rem;
+  line-height: 67px;
+  color: black;
+  grid-column: 1 / 3;
+}
+.card {
+  margin-top: 4rem;
+  background-color: #edefee;
+  grid-row: 2;
+  margin: 0 1rem;
+  padding-bottom: 1.5rem;
+  border-radius: 16px 16px 0 0;
+}
+.card-image {
+  width: 100%;
+  height: 160px;
+  object-fit: cover;
+  border-radius: 16px 16px 0 0;
+}
+.card-text {
+  padding: 0 1rem 0 1rem;
+  margin-top: 1rem;
+  height: 11rem;
+}
+.order-button > a{
+  text-decoration: none;
+  color: black;
+  font-weight: 800;
+  margin-right: 1rem;
+  margin-left: 1rem;
+  margin-top: auto;
+}
+.card h1 {
+  font-family: 'Markazi Text';
+  font-size: 1.4rem;
+  max-width: fit-content;
+  display: contents;
+  margin-top: .5rem;
+}
+.card h2 {
+  color: #EE9972;
+  font-size: 1rem;
+  float: right;
+  margin-top: .2rem;
+}
+.card p {
+  margin: 1rem 0 1rem 0;
+}
+.card:nth-child(n) {
+  font-family: 'Karla';
+}
+.specials > .button {
+  grid-column: 3;
+  justify-self: end;
+  margin-right: 1rem;
 }
 
-.App-link {
-  color: #61dafb;
+footer {
+  margin-top: 100rem;
+  display: flex;
+}
+footer header {
+  margin-left: 3rem;
+}
+footer ul {
+  margin-left: 3rem;
+  list-style: none;
+}
+footer > img {
+  width: 10%;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.button {
+  display: block;
+  width: fit-content;
+  height: 25px;
+  text-decoration: none;
+  font-family: Karla;
+  font-size: 1.2rem;
+  font-weight: 900;
+  color: black;
+  background-color: #f4ce14;
+  padding: 1.2rem 2.5rem;
+  border-radius: 16px;
 }
