--- a/src/App.css
+++ b/src/App.css
@@ -94,6 +94,7 @@ main {
   grid-template-columns: auto auto auto;
   grid-template-rows: 5rem auto;
   margin-top: 8rem;
+  margin-bottom: 3rem;
   padding: 0 17rem;
 }
 .specials > h1 {
@@ -124,7 +125,7 @@ main {
   margin-top: 1rem;
   height: 11rem;
 }
-.order-button > a{
+.order-button > a {
   text-decoration: none;
   color: black;
   font-weight: 800;
@@ -137,13 +138,13 @@ main {
   font-size: 1.4rem;
   max-width: fit-content;
   display: contents;
-  margin-top: .5rem;
+  margin-top: 0.5rem;
 }
 .card h2 {
-  color: #EE9972;
+  color: #ee9972;
   font-size: 1rem;
   float: right;
-  margin-top: .2rem;
+  margin-top: 0.2rem;
 }
 .card p {
   margin: 1rem 0 1rem 0;
@@ -155,6 +156,51 @@ main {
   grid-column: 3;
   justify-self: end;
   margin-right: 1rem;
+}
+
+.testimonials {
+  display: grid;
+  grid-template-columns: 13rem 13rem 13rem 13rem;
+  grid-template-rows: auto auto;
+  justify-content: center;
+  background-color: #d9d9d9;
+  padding: 2rem 0rem 4rem;
+}
+
+.testimonials > h1 {
+  grid-row: 1;
+  grid-column: 2 / 3;
+  font-family: 'Markazi Text';
+  margin-left: 70%;
+  margin-bottom: 2rem;
+}
+
+.testimonial-card {
+  display: grid;
+  grid-template-columns: 2;
+  grid-template-rows: 3;
+  grid-row: 2;
+  background-color: white;
+  margin-right: 1.5rem;
+  font-family: 'Karla';
+  padding: 1rem;
+}
+
+.testimonial-card img {
+  width: 75px;
+  grid-row: 2;
+  margin-top: 1rem;
+}
+.testimonial-card h3 {
+  grid-row: 2;
+  font-weight: 900;
+  margin-top: 1rem;
+}
+.testimonial-card p {
+  grid-row: 3;
+  grid-column: 1/3;
+  font-size: 0.9rem;
+  margin: 0.5rem;
 }
 
 footer {
