--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,7 @@
   padding-bottom: 1rem;
   align-items: center;
   height: 5.5rem;
-  margin: 0 10%
+  margin: 0 10%;
 }
 
 .header .logo {
@@ -57,7 +57,7 @@ main {
   height: 23rem;
   justify-content: space-evenly;
 }
-.hero h1 {
+#ll-header {
   font-family: 'Markazi Text';
   margin-top: 12px;
   font-weight: 500;
@@ -65,7 +65,7 @@ main {
   line-height: 67px;
   color: #f4ce14;
 }
-.hero h2 {
+#ll-header ~ h2 {
   font-family: 'Markazi Text';
   color: white;
   font-weight: 400;
@@ -236,7 +236,7 @@ h2 {
 }
 
 .about > img:nth-child(4) {
-  position: relative
+  position: relative;
 }
 
 .about img ~ img {
@@ -273,7 +273,8 @@ h2 {
   margin-left: 3rem;
   list-style: none;
 }
-.footer a, li {
+.footer a,
+li {
   text-decoration: none;
   color: black;
   font-size: 1.2rem;
@@ -285,6 +286,60 @@ h2 {
 
 .footer-list {
   margin-right: 5rem;
+}
+
+.booking {
+  background-color: #495e57;
+  display: flex;
+  flex-direction: column;
+  font-family: 'Karla';
+  align-items: flex-start;
+  color: white;
+  font-size: 1.3rem;
+  padding: 3rem;
+  padding-left: 44%;
+}
+.booking h2 {
+  margin-bottom: 2.5rem;
+}
+.booking h3 {
+  margin-bottom: 1.5rem;
+  font-weight: 500;
+}
+.booking-form {
+  display: grid;
+  min-width: 250px;
+  gap: 20px;
+}
+.booking-form label {
+  font-weight: 600;
+  margin-top: 1rem;
+  margin-bottom: 0.3rem;
+}
+/* .booking-form  option: {
+  color: red;
+  box-shadow: 0 0 10px 100px #1882A8 inset;
+
+} */
+.booking-form select,
+option,
+input {
+  font-family: 'Karla';
+  border-radius: 4px;
+  border-width: 0;
+  /* display: none */
+  box-sizing: border-box;
+  width: 100%;
+  padding: 10px 15px;
+}
+
+.booking-form option:checked {
+  color: black;
+  background-color: blue;
+}
+
+#form-submit {
+  padding-bottom: 15%;
 }
 
 .button {
